# ComfyUI-Chatterbox

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
modules/: chatterbox_handler.py
src/chatterbox/: __init__.py  tts.py  vc.py
src/chatterbox/models/s3gen/: flow.py  flow_matching.py  s3gen.py
src/chatterbox/models/s3gen/matcha/: transformer.py
src/chatterbox/models/t3/: llama_configs.py  t3.py
src/chatterbox/models/t3/modules/: perceiver.py
workflow-examples/: ChatterboxTTS-workflow.json
