[project]
name = "ComfyUI-Chatterbox"
description = "ComfyUI Chatterbox TTS & Voice Conversion Node"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "torchaudio", "librosa", "numpy", "huggingface_hub", "resemble-perth", "einops", "scipy", "tokenizers", "soundfile", "s3tokenizer", "tqdm", "conformer"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-Chatterbox"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-Chatterbox"
Icon = ""
