[project]
name = "ComfyUI-ChatterboxTTS"
description = "ComfyUI Chatterbox TTS & Voice Conversion Node"
version = "1.2.1"
license = {file = "LICENSE"}
dependencies = ["torch", "torchaudio", "librosa", "numpy", "huggingface_hub", "einops", "scipy", "tokenizers", "soundfile", "s3tokenizer", "tqdm", "conformer", "safetensors", "transformers", "diffusers"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-Chatterbox"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-ChatterboxTTS"
Icon = ""

